# human-machine

./: MANIFEST.in  README.md  pyproject.toml
src/human_machine/: cli.py  config.py  githf.py  machina.yaml
src/human_machine/providers/: camelids.py  castor_pollux.py  depsek.py  electroid.py  openai.py  qrog.py  strangelove.py
src/name_of_the_machine/: cli.py
tests/: test_cli.py  test_e2e.py  test_llm_soup.py  test_utilities.py
