[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "human-machine"
version = "0.0.2"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "A human acting as a machine."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["human-machine"]
dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
human-machine = "human_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/human-machines/human-machine"

[dependency-groups]
dev = ["pytest>=8.0.0"]